--- a/doc/USER_MANUAL/04_creating_databases.tex
+++ b/doc/USER_MANUAL/04_creating_databases.tex
@@ -294,13 +294,13 @@ thus refer to Appendix~\ref{cha:Coordinates} for the orientation
 of the reference frame. This vector is made unitary internally in
 the solver and thus only its direction matters here; its norm is ignored
 and the norm of the force used is the factor force source times the
-source time function.
+source-time function.
 
 When using this option, by default the code can locate the force source
 anywhere between mesh points in order to honor its exact location; this
 is more precise than using the closest GLL mesh point, but it is also a bit slower.
 \item [{\texttt{USE\_RICKER\_TIME\_FUNCTION}}] Turn this flag on to use
-a Ricker source time function, i.e., the second derivative of a Gaussian, instead of the source time functions
+a Ricker source-time function, i.e., the second derivative of a Gaussian, instead of the source-time functions
 set by default to represent a (tilted) \texttt{FORCESOLUTION} force
 point source or a \texttt{CMTSOLUTION} moment-tensor source.
 Note that we use the standard definition of a Ricker, for a dominant frequency $f_0$:
@@ -319,13 +319,13 @@ This gives the wavelet of Figure~\ref{fig:RickerWavelet}.
 Originally, if a \texttt{CMTSOLUTION} moment-tensor source is used, a (pseudo)
 Heaviside step function with a very short half duration is defined
 for elastic cases to represent the permanent slip on the fault while
-in the acoustic case a Gaussian source time function with a similarly
+in the acoustic case a Gaussian source-time function with a similarly
 short half duration is defined to physically describe actions within
 the fluid. Otherwise, if a \texttt{FORCESOLUTION} force source is
-used, a (pseudo) Dirac delta source time function is defined by default.
+used, a (pseudo) Dirac delta source-time function is defined by default.
 Any other source-time function may then be obtained by convolution.
 \item [{\texttt{PRINT\_SOURCE\_TIME\_FUNCTION}}] Turn this flag on to print
-information about the source time function in the file \texttt{OUTPUT\_FILES/plot\_source\_time\_function.txt}.
+information about the source-time function in the file \texttt{OUTPUT\_FILES/plot\_source\_time\_function.txt}.
 This feature is only relevant for the solver.
 %
 \end{description}
