--- a/doc/USER_MANUAL/14_post_processing.tex
+++ b/doc/USER_MANUAL/14_post_processing.tex
@@ -21,7 +21,7 @@ For such comparisons, the following steps are recommended:
 \begin{enumerate}
 \item Make sure that both synthetic and observed seismograms have the correct
 station/event and timing information.
-\item Convolve synthetic seismograms with a source time function with the
+\item Convolve synthetic seismograms with a source-time function with the
 half duration specified in the \texttt{CMTSOLUTION} file, provided,
 as recommended, you used a zero half duration in the SEM simulations.
 \item Resample both observed and synthetic seismograms to a common sampling
@@ -87,7 +87,7 @@ and add the suffix `\texttt{bp}' to the file names.\newline
 
 More options are available for this script, such as adding time shift
 to the origin time of the synthetics, convolving the synthetics with
-a triangular source time function with a given half duration, etc.
+a triangular source-time function with a given half duration, etc.
 Type \texttt{process\_syn.pl} without any argument for a detailed
 usage.\newline
 
