--- a/doc/USER_MANUAL/A_reference_frame.tex
+++ b/doc/USER_MANUAL/A_reference_frame.tex
@@ -8,14 +8,14 @@ frame:
 \item the $z$ axis points up
 \end{itemize}
 Note that this convention is different from both the \citet{AkRi80}
-convention and the Harvard Centroid-Moment Tensor (CMT) convention.
+convention and the Global/Harvard Centroid-Moment Tensor (CMT) convention.
 The Aki \& Richards convention is
 \begin{itemize}
 \item the $x$ axis points North
 \item the $y$ axis points East
 \item the $z$ axis points down
 \end{itemize}
-and the Harvard CMT convention is
+and the Global/Harvard CMT convention is
 \begin{itemize}
 \item the $x$ axis points South
 \item the $y$ axis points East
