--- a/doc/USER_MANUAL/01_introduction.tex
+++ b/doc/USER_MANUAL/01_introduction.tex
@@ -87,7 +87,7 @@ programming based upon the Message Passing Interface (MPI) \citep{GrLuSk94,Pac97
 
 SPECFEM3D won the Gordon Bell award for best performance at the SuperComputing~2003
 conference in Phoenix, Arizona (USA) (see \citet{KoTsChTr03} and
-\url{www.sc-conference.org/sc2003/nrfinalaward.html}). It was a finalist
+\url{https://dl.acm.org/doi/10.1145/1048935.1050155}). It was a finalist
 again in 2008 for a run at 0.16 petaflops (sustained) on 149,784 processors
 of the `Jaguar' Cray XT5 system at Oak Ridge National Laboratories
 (USA) \citep{CaKoLaTiMiLeSnTr08}. It also won the BULL Joseph Fourier
