--- a/doc/USER_MANUAL/02_getting_started.tex
+++ b/doc/USER_MANUAL/02_getting_started.tex
@@ -67,8 +67,8 @@ To check if that option works fine on your machine, run the code with and withou
 
 
 Note that we use CUBIT (now called Trelis) to create meshes of hexahedra, but other packages
-can be used as well, for instance GiD from \url{http://gid.cimne.upc.es}
-or Gmsh from \url{http://geuz.org/gmsh} \citep{GeRe09}. Even mesh
+can be used as well, for instance GiD from \url{https://www.gidsimulation.com}
+or Gmsh from \url{http://gmsh.info} \citep{GeRe09}. Even mesh
 creation packages that generate tetrahedra, for instance TetGen from
 \url{http://tetgen.berlios.de}, can be used because each tetrahedron
 can then easily be decomposed into four hexahedra as shown in the
@@ -459,21 +459,21 @@ The important entries in the Doxyfile are:
 \noindent Finally, some useful links:
 
 \begin{itemize}
-\item[\textbullet] a good and short summary for the basic utilisation of Doxygen:
+\item[\textbullet] short summary for the basic utilisation of Doxygen:
 
-\url{http://www.softeng.rl.ac.uk/blog/2010/jan/30/callgraph-fortran-doxygen/},
+\url{https://www.doxygen.nl/manual/starting.html},
 
 \item[\textbullet] to configure the diagrams :
 
-\url{http://www.stack.nl/~dimitri/doxygen/manual/diagrams.html},
+\url{https://www.doxygen.nl/manual/diagrams.html},
 
 \item[\textbullet] the complete alphabetical index of the tags in Doxyfile:
 
-\url{http://www.stack.nl/~dimitri/doxygen/manual/config.html},
+\url{https://www.doxygen.nl/manual/config.html},
 
 \item[\textbullet] more generally, the Doxygen manual:
 
-\url{http://www.stack.nl/~dimitri/doxygen/manual/index.html}.
+\url{https://www.doxygen.nl/manual/index.html}.
 
 \end{itemize}
 
