--- a/doc/USER_MANUAL/03_mesh_generation.tex
+++ b/doc/USER_MANUAL/03_mesh_generation.tex
@@ -692,12 +692,12 @@ and if \texttt{NDOUBLINGS} is set to \texttt{2}). Doubling layers must be at lea
 The layer count starts from the bottom layer.
 More entries must be listed by the user if \texttt{NDOUBLINGS} is larger than \texttt{2}.
 \item [{\texttt{CREATE\_ABAQUS\_FILES}}] Set this flag to \texttt{.true.}
-to save Abaqus FEA \urlwithparentheses{www.simulia.com} mesh files
+to save \href{www.simulia.com}{Abaqus FEA} mesh files
 for subsequent viewing. Turning the flag on generates files in the
 \texttt{LOCAL\_PATH} directory. See Section~\ref{sec:Mesh-graphics}
 for a discussion of mesh viewing features.
 \item [{\texttt{CREATE\_DX\_FILES}}] Set this flag to \texttt{.true.} to
-save OpenDX \urlwithparentheses{www.opendx.org} mesh files for subsequent
+save \href{www.opendx.org}{OpenDX} mesh files for subsequent
 viewing.
 \item [{\texttt{LOCAL\_PATH}}] Directory in which the partitions generated
 by the mesher will be written. Generally one uses a directory on the
