--- a/doc/USER_MANUAL/14_post_processing.tex
+++ b/doc/USER_MANUAL/14_post_processing.tex
@@ -109,7 +109,7 @@ rotate.pl -l 0 -L 180 -d DATA/*.BHE.SAC.bp
 rotate.pl -l 0 -L 180 SEM/*.BXE.semd.sac.bp
 \end{verbatim}
 where the first command performs rotation on the SAC data obtained
-through Seismogram Transfer Program (STP) \urlwithparentheses{http://www.data.scec.org/STP/stp.html},
+through Seismogram Transfer Program (\href{http://www.data.scec.org/STP/stp.html}{STP}),
 while the second command rotates the processed SEM synthetics.
 
 
