--- a/doc/USER_MANUAL/manual_SPECFEM3D_Cartesian.tex
+++ b/doc/USER_MANUAL/manual_SPECFEM3D_Cartesian.tex
@@ -98,7 +98,7 @@
 %\renewcommand{\baselinestretch}{1.5}
 
 % hyperlinks to sections and references
-\newcommand{\urlwithparentheses}[1]{(\url{#1})}
+%\newcommand{\urlwithparentheses}[1]{(\url{#1})}
 
 \newcommand{\nexxi}{\mbox{\texttt{NEX\_XI\/}}}
 \newcommand{\nexeta}{\mbox{\texttt{NEX\_ETA\/}}}
