--- a/doc/USER_MANUAL/notes_and_acknowledgement.tex
+++ b/doc/USER_MANUAL/notes_and_acknowledgement.tex
@@ -16,9 +16,9 @@ USA). The non-structured global numbering software was provided by
 Paul F. Fischer (Brown University, Providence, Rhode Island, USA,
 now at Argonne National Laboratory, USA).\newline
 
-OpenDX \urlwithparentheses{http://www.opendx.org} is open-source
-based on IBM Data Explorer, AVS \urlwithparentheses{http://www.avs.com}
-is a trademark of Advanced Visualization Systems, and ParaView \urlwithparentheses{http://www.paraview.org}
+\href{http://www.opendx.org}{OpenDX} is open-source
+based on IBM Data Explorer, \href{http://www.avs.com}{AVS}
+is a trademark of Advanced Visualization Systems, and \href{http://www.paraview.org}{ParaView}
 is an open-source visualization platform.\newline
 
 Please provide your feedback, questions, comments, and suggestions through the github repository.
