updates Hopper info

--- a/doc/USER_MANUAL/02_getting_started.tex
+++ b/doc/USER_MANUAL/02_getting_started.tex
@@ -154,6 +154,7 @@ However at the moment, we still have one version linked to one specific architec
 - CUDA 9 for Volta,   like V100
 - CUDA 10 for Turing, like GeForce RTX 2080
 - CUDA 11 for Ampere, like A100
+- CUDA 12 for Hopper, like H100
 \end{verbatim}
 So even if you have the new CUDA toolkit version 11, but you want to run on say a K20 GPU, then you would still configure with:
 \begin{verbatim}
