- added a new parameter "MOVIE_VOLUME_STRESS" in the Par_file to save the stress tensor components in the entire volume for the viscoelastic simulatons.

--- a/doc/USER_MANUAL/11_graphics.tex
+++ b/doc/USER_MANUAL/11_graphics.tex
@@ -47,7 +47,7 @@ large output files. \texttt{MOVIE\_VOLUME} files are saved in the
 \texttt{LOCAL\_PATH} directory, whereas \texttt{MOVIE\_SURFACE} output
 files are saved in the \texttt{OUTPUT\_FILES} directory. We save the
 displacement field if the parameter \texttt{SAVE\_DISPLACEMENT} is
-set, otherwise the velocity field is saved. The look of a movie is
+set, otherwise the velocity field is saved. Additionally, if the \texttt{MOVIE\_VOLUME\_STRESS} is set to \texttt{.true.}, stress tensor components are saved in the entire volume. The look of a movie is
 determined by the half-duration of the source. The half-duration should
 be large enough so that the movie does not contain frequencies that
 are not resolved by the mesh, i.e., it should not contain numerical
