--- a/doc/USER_MANUAL/authors.tex
+++ b/doc/USER_MANUAL/authors.tex
@@ -33,6 +33,7 @@ Min Chen,
 Paul Cristini,
 Cl\'ement Durochat,
 Percy Galvez,
+Rahul Garg,
 Rene Gassmoeller,
 Hom Nath Gharti,
 Dominik G\"oddeke,
